--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -7,13 +7,12 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #0f52ba;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary-dark: #0e4aa7;
+  --ifm-color-primary-darker: #0d469e;
+  --ifm-color-primary-darkest: #0a3982;
+  --ifm-color-primary-light: #105acd;
+  --ifm-color-primary-lighter: #115ed6;
+  --ifm-color-primary-lightest: #196cec;
 }
 
 .docusaurus-highlight-code-line {
